delete file and auth control